Influence of high leverage points: removing high-end towns

--- a/ml-regression/PhillyCrime.ipynb
+++ b/ml-regression/PhillyCrime.ipynb
@@ -710,6 +710,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Remove high-value outlier neighborhoods and redo analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sales_nohighend = sales_noCC[sales_noCC['HousePrice'] < 350000]\n",
+    "crime_model_nohighend = graphlab.linear_regression.create(sales_nohighend, target='HousePrice', features=['CrimeRate'],\n",
+    "                                                         validation_set=None, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Do the coefficients change much?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">225204.604303</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">16404.0247514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">CrimeRate</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-2287.69717443</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">491.537478123</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[2 rows x 4 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tname\tstr\n",
+       "\tindex\tstr\n",
+       "\tvalue\tfloat\n",
+       "\tstderr\tfloat\n",
+       "\n",
+       "Rows: 2\n",
+       "\n",
+       "Data:\n",
+       "+-------------+-------+----------------+---------------+\n",
+       "|     name    | index |     value      |     stderr    |\n",
+       "+-------------+-------+----------------+---------------+\n",
+       "| (intercept) |  None | 225204.604303  | 16404.0247514 |\n",
+       "|  CrimeRate  |  None | -2287.69717443 | 491.537478123 |\n",
+       "+-------------+-------+----------------+---------------+\n",
+       "[2 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crime_model_noCC.get('coefficients')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">name</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">index</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">value</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">stderr</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">(intercept)</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">199073.589615</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">11932.5101105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">CrimeRate</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">None</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">-1837.71280989</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">351.519609333</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[2 rows x 4 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tname\tstr\n",
+       "\tindex\tstr\n",
+       "\tvalue\tfloat\n",
+       "\tstderr\tfloat\n",
+       "\n",
+       "Rows: 2\n",
+       "\n",
+       "Data:\n",
+       "+-------------+-------+----------------+---------------+\n",
+       "|     name    | index |     value      |     stderr    |\n",
+       "+-------------+-------+----------------+---------------+\n",
+       "| (intercept) |  None | 199073.589615  | 11932.5101105 |\n",
+       "|  CrimeRate  |  None | -1837.71280989 | 351.519609333 |\n",
+       "+-------------+-------+----------------+---------------+\n",
+       "[2 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crime_model_nohighend.get('coefficients')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
