Predicting Values, Residual Sum of Squares, and Prefict the squarefeet given price

--- a/ml-regression/Simple Linear Regression/week-1-simple-regression-assignment-blank.ipynb
+++ b/ml-regression/Simple Linear Regression/week-1-simple-regression-assignment-blank.ipynb
@@ -272,11 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: -47116.0765749\n",
+      "Slope: 281.958838568\n"
+     ]
+    }
+   ],
    "source": [
     "sqft_intercept, sqft_slope = simple_linear_regression(train_data['sqft_living'], train_data['price'])\n",
     "\n",
@@ -300,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -308,6 +317,7 @@
    "source": [
     "def get_regression_predictions(input_feature, intercept, slope):\n",
     "    # calculate the predicted values:\n",
+    "    predicted_values = slope*input_feature + intercept\n",
     "    \n",
     "    return predicted_values"
    ]
@@ -323,11 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated price for a house with 2650 squarefeet is $700074.85\n"
+     ]
+    }
+   ],
    "source": [
     "my_house_sqft = 2650\n",
     "estimated_price = get_regression_predictions(my_house_sqft, sqft_intercept, sqft_slope)\n",
@@ -352,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -360,10 +378,13 @@
    "source": [
     "def get_residual_sum_of_squares(input_feature, output, intercept, slope):\n",
     "    # First get the predictions\n",
-    "\n",
+    "    predicted = slope*input_feature + intercept\n",
+    "    \n",
     "    # then compute the residuals (since we are squaring it doesn't matter which order you subtract)\n",
+    "    residuals = output-predicted\n",
     "\n",
     "    # square the residuals and add them up\n",
+    "    RSS = (residuals*residuals).sum()\n",
     "\n",
     "    return(RSS)"
    ]
@@ -377,11 +398,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print get_residual_sum_of_squares(test_feature, test_output, test_intercept, test_slope) # should be 0.0"
    ]
@@ -397,11 +426,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RSS of predicting Prices based on Square Feet is : 1.20191835632e+15\n"
+     ]
+    }
+   ],
    "source": [
     "rss_prices_on_sqft = get_residual_sum_of_squares(train_data['sqft_living'], train_data['price'], sqft_intercept, sqft_slope)\n",
     "print 'The RSS of predicting Prices based on Square Feet is : ' + str(rss_prices_on_sqft)"
@@ -425,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -433,7 +470,7 @@
    "source": [
     "def inverse_regression_predictions(output, intercept, slope):\n",
     "    # solve output = intercept + slope*input_feature for input_feature. Use this equation to compute the inverse predictions:\n",
-    "\n",
+    "    estimated_feature = (output-intercept)/slope\n",
     "    return estimated_feature"
    ]
   },
@@ -448,11 +485,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated squarefeet for a house worth $800000.00 is 3004\n"
+     ]
+    }
+   ],
    "source": [
     "my_house_price = 800000\n",
     "estimated_squarefeet = inverse_regression_predictions(my_house_price, sqft_intercept, sqft_slope)\n",
