Estimate prices from bedrooms

--- a/ml-regression/Simple Linear Regression/week-1-simple-regression-assignment-blank.ipynb
+++ b/ml-regression/Simple Linear Regression/week-1-simple-regression-assignment-blank.ipynb
@@ -521,14 +521,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept (bedrooms): 109473.180469\n",
+      "Slope (bedrooms): 127588.952175\n"
+     ]
+    }
+   ],
    "source": [
     "# Estimate the slope and intercept for predicting 'price' based on 'bedrooms'\n",
-    "\n"
+    "sqft_intercept_bedrooms, sqft_slope_bedrooms = simple_linear_regression(train_data['bedrooms'], train_data['price'])\n",
+    "\n",
+    "print \"Intercept (bedrooms): \" + str(sqft_intercept_bedrooms)\n",
+    "print \"Slope (bedrooms): \" + str(sqft_slope_bedrooms)\n"
    ]
   },
   {
