Comparing RSS of regression based on square feet and # of bedrooms

--- a/ml-regression/Simple Linear Regression/week-1-simple-regression-assignment-blank.ipynb
+++ b/ml-regression/Simple Linear Regression/week-1-simple-regression-assignment-blank.ipynb
@@ -561,25 +561,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RSS of predicting Prices based on Bedrooms is : 4.93364582868e+14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute RSS when using bedrooms on TEST data:\n"
+    "# Compute RSS when using bedrooms on TEST data:\n",
+    "rss_prices_on_bedrooms = get_residual_sum_of_squares(test_data['bedrooms'], test_data['price'], sqft_intercept_bedrooms, sqft_slope_bedrooms)\n",
+    "print 'The RSS of predicting Prices based on Bedrooms is : ' + str(rss_prices_on_bedrooms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RSS of predicting Prices based on Square Feet is : 2.75402936247e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute RSS when using squarefeet on TEST data:\n",
+    "rss_prices_on_sqft = get_residual_sum_of_squares(test_data['sqft_living'], test_data['price'], sqft_intercept, sqft_slope)\n",
+    "print 'The RSS of predicting Prices based on Square Feet is : ' + str(rss_prices_on_sqft)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Compute RSS when using squarefeet on TEST data:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
