RSS for multiple regression

--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -50,12 +50,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create for academic use is assigned to wilson_jr@outlook.com and will expire on January 07, 2018.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] graphlab.cython.cy_server: GraphLab Create v2.1 started. Logging: C:\\Users\\wilson\\AppData\\Local\\Temp\\graphlab_server_1490899773.log.0\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -98,11 +113,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Linear regression:</pre>"
+      ],
+      "text/plain": [
+       "Linear regression:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 17384</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 17384"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of features          : 3</pre>"
+      ],
+      "text/plain": [
+       "Number of features          : 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 3</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of coefficients    : 4</pre>"
+      ],
+      "text/plain": [
+       "Number of coefficients    : 4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting Newton Method</pre>"
+      ],
+      "text/plain": [
+       "Starting Newton Method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 2        | 1.036952     | 4146407.600631     | 258679.804477 |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 2        | 1.036952     | 4146407.600631     | 258679.804477 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>SUCCESS: Optimal solution found.</pre>"
+      ],
+      "text/plain": [
+       "SUCCESS: Optimal solution found."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre></pre>"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "example_features = ['sqft_living', 'bedrooms', 'bathrooms']\n",
     "example_model = graphlab.linear_regression.create(train_data, target = 'price', features = example_features, \n",
@@ -118,11 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+----------------+---------------+\n",
+      "|     name    | index |     value      |     stderr    |\n",
+      "+-------------+-------+----------------+---------------+\n",
+      "| (intercept) |  None | 87910.0724924  |  7873.3381434 |\n",
+      "| sqft_living |  None | 315.403440552  | 3.45570032585 |\n",
+      "|   bedrooms  |  None | -65080.2155528 | 2717.45685442 |\n",
+      "|  bathrooms  |  None | 6944.02019265  | 3923.11493144 |\n",
+      "+-------------+-------+----------------+---------------+\n",
+      "[4 rows x 4 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "example_weight_summary = example_model.get(\"coefficients\")\n",
     "print example_weight_summary"
@@ -141,11 +352,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "271789.505878\n"
+     ]
+    }
+   ],
    "source": [
     "example_predictions = example_model.predict(train_data)\n",
     "print example_predictions[0] # should be 271789.505878"
@@ -167,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -175,10 +394,13 @@
    "source": [
     "def get_residual_sum_of_squares(model, data, outcome):\n",
     "    # First get the predictions\n",
+    "    predictions = model.predict(data)\n",
     "\n",
     "    # Then compute the residuals/errors\n",
+    "    residuals = outcome-predictions\n",
     "\n",
     "    # Then square and add them up\n",
+    "    RSS = (residuals*residuals).sum()\n",
     "\n",
     "    return(RSS)    "
    ]
