--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
@@ -414,11 +414,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7376153833e+14\n"
+     ]
+    }
+   ],
    "source": [
     "rss_example_train = get_residual_sum_of_squares(example_model, test_data, test_data['price'])\n",
     "print rss_example_train # should be 2.7376153833e+14"
@@ -447,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -470,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -482,14 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# create the remaining 3 features in both TEST and TRAIN data\n",
-    "\n"
+    "\n",
+    "train_data['bed_bath_rooms'] = train_data['bedrooms']*train_data['bathrooms']\n",
+    "train_data['log_sqft_living'] = train_data['sqft_living'].apply(lambda x: log(x))\n",
+    "train_data['lat_plus_long'] = train_data['lat']+train_data['long']\n",
+    "\n",
+    "test_data['bed_bath_rooms'] = test_data['bedrooms']*test_data['bathrooms']\n",
+    "test_data['log_sqft_living'] = test_data['sqft_living'].apply(lambda x: log(x))\n",
+    "test_data['lat_plus_long'] = test_data['lat']+test_data['long']\n"
    ]
   },
   {
@@ -511,12 +526,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.4466777016\n",
+      "7.50390163159\n",
+      "7.55027467965\n",
+      "-74.6533349722\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(test_data['bedrooms_squared'].mean())\n",
+    "print(test_data['bed_bath_rooms'].mean())\n",
+    "print(test_data['log_sqft_living'].mean())\n",
+    "print(test_data['lat_plus_long'].mean())"
+   ]
   },
   {
    "cell_type": "markdown",
