Learning multiple models

--- a/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
+++ b/ml-regression/Multiple Regression/week-2-multiple-regression-assignment-1-blank.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -588,24 +588,617 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre>Linear regression:</pre>"
+      ],
+      "text/plain": [
+       "Linear regression:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 17384</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 17384"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of features          : 5</pre>"
+      ],
+      "text/plain": [
+       "Number of features          : 5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 5</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of coefficients    : 6</pre>"
+      ],
+      "text/plain": [
+       "Number of coefficients    : 6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting Newton Method</pre>"
+      ],
+      "text/plain": [
+       "Starting Newton Method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 2        | 0.027017     | 4074878.213096     | 236378.596455 |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 2        | 0.027017     | 4074878.213096     | 236378.596455 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>SUCCESS: Optimal solution found.</pre>"
+      ],
+      "text/plain": [
+       "SUCCESS: Optimal solution found."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre></pre>"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Linear regression:</pre>"
+      ],
+      "text/plain": [
+       "Linear regression:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 17384</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 17384"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of features          : 6</pre>"
+      ],
+      "text/plain": [
+       "Number of features          : 6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 6</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of coefficients    : 7</pre>"
+      ],
+      "text/plain": [
+       "Number of coefficients    : 7"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting Newton Method</pre>"
+      ],
+      "text/plain": [
+       "Starting Newton Method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 2        | 0.025018     | 4014170.932927     | 235190.935428 |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 2        | 0.025018     | 4014170.932927     | 235190.935428 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>SUCCESS: Optimal solution found.</pre>"
+      ],
+      "text/plain": [
+       "SUCCESS: Optimal solution found."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre></pre>"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Linear regression:</pre>"
+      ],
+      "text/plain": [
+       "Linear regression:"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of examples          : 17384</pre>"
+      ],
+      "text/plain": [
+       "Number of examples          : 17384"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of features          : 9</pre>"
+      ],
+      "text/plain": [
+       "Number of features          : 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of unpacked features : 9</pre>"
+      ],
+      "text/plain": [
+       "Number of unpacked features : 9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Number of coefficients    : 10</pre>"
+      ],
+      "text/plain": [
+       "Number of coefficients    : 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>Starting Newton Method</pre>"
+      ],
+      "text/plain": [
+       "Starting Newton Method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>--------------------------------------------------------</pre>"
+      ],
+      "text/plain": [
+       "--------------------------------------------------------"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |</pre>"
+      ],
+      "text/plain": [
+       "| Iteration | Passes   | Elapsed Time | Training-max_error | Training-rmse |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>| 1         | 2        | 0.020024     | 3193229.177894     | 228200.043155 |</pre>"
+      ],
+      "text/plain": [
+       "| 1         | 2        | 0.020024     | 3193229.177894     | 228200.043155 |"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>+-----------+----------+--------------+--------------------+---------------+</pre>"
+      ],
+      "text/plain": [
+       "+-----------+----------+--------------+--------------------+---------------+"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre>SUCCESS: Optimal solution found.</pre>"
+      ],
+      "text/plain": [
+       "SUCCESS: Optimal solution found."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre></pre>"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Learn the three models: (don't forget to set validation_set = None)\n"
+    "# Learn the three models: (don't forget to set validation_set = None)\n",
+    "model1 = graphlab.linear_regression.create(train_data, target = 'price', features = model_1_features, validation_set = None)\n",
+    "model2 = graphlab.linear_regression.create(train_data, target = 'price', features = model_2_features, validation_set = None)\n",
+    "model3 = graphlab.linear_regression.create(train_data, target = 'price', features = model_3_features, validation_set = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-------+----------------+---------------+\n",
+      "|     name    | index |     value      |     stderr    |\n",
+      "+-------------+-------+----------------+---------------+\n",
+      "| (intercept) |  None | -56140675.7444 | 1649985.42028 |\n",
+      "| sqft_living |  None | 310.263325778  | 3.18882960408 |\n",
+      "|   bedrooms  |  None | -59577.1160682 | 2487.27977322 |\n",
+      "|  bathrooms  |  None | 13811.8405418  | 3593.54213297 |\n",
+      "|     lat     |  None | 629865.789485  | 13120.7100323 |\n",
+      "|     long    |  None | -214790.285186 | 13284.2851607 |\n",
+      "+-------------+-------+----------------+---------------+\n",
+      "[6 rows x 4 columns]\n",
+      "\n",
+      "+----------------+-------+----------------+---------------+\n",
+      "|      name      | index |     value      |     stderr    |\n",
+      "+----------------+-------+----------------+---------------+\n",
+      "|  (intercept)   |  None | -54410676.1152 | 1650405.16541 |\n",
+      "|  sqft_living   |  None | 304.449298057  | 3.20217535637 |\n",
+      "|    bedrooms    |  None | -116366.043231 | 4805.54966546 |\n",
+      "|   bathrooms    |  None | -77972.3305135 | 7565.05991091 |\n",
+      "|      lat       |  None | 625433.834953  | 13058.3530972 |\n",
+      "|      long      |  None | -203958.60296  | 13268.1283711 |\n",
+      "| bed_bath_rooms |  None | 26961.6249092  | 1956.36561555 |\n",
+      "+----------------+-------+----------------+---------------+\n",
+      "[7 rows x 4 columns]\n",
+      "\n",
+      "+------------------+-------+----------------+---------------+\n",
+      "|       name       | index |     value      |     stderr    |\n",
+      "+------------------+-------+----------------+---------------+\n",
+      "|   (intercept)    |  None | -52974974.0602 |  1615194.9439 |\n",
+      "|   sqft_living    |  None | 529.196420564  | 7.69913498511 |\n",
+      "|     bedrooms     |  None | 28948.5277313  | 9395.72889106 |\n",
+      "|    bathrooms     |  None |  65661.207231  | 10795.3380703 |\n",
+      "|       lat        |  None | 704762.148408  | 1292011141.66 |\n",
+      "|       long       |  None | -137780.01994  | 1292011141.57 |\n",
+      "|  bed_bath_rooms  |  None | -8478.36410518 | 2858.95391257 |\n",
+      "| bedrooms_squared |  None | -6072.38466067 | 1494.97042777 |\n",
+      "| log_sqft_living  |  None | -563467.784269 | 17567.8230814 |\n",
+      "|  lat_plus_long   |  None | -83217.1979248 | 1292011141.58 |\n",
+      "+------------------+-------+----------------+---------------+\n",
+      "[10 rows x 4 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Examine/extract each model's coefficients:\n"
+    "# Examine/extract each model's coefficients:\n",
+    "model1_weight_summary = model1.get('coefficients')\n",
+    "model2_weight_summary = model2.get('coefficients')\n",
+    "model3_weight_summary = model3.get('coefficients')\n",
+    "\n",
+    "print(model1_weight_summary)\n",
+    "print(model2_weight_summary)\n",
+    "print(model3_weight_summary)"
    ]
   },
   {
